feat: Add MySQL table, update model and OpenAPI spec.
